2002-09-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3mhack.el (w3mhack-examine-modules): Do not compile
	`mew-shimbun.el' with old Mew.

	* mew-w3m.el (top): Avoid byte-compile error and warning for old
	Mew. Do not push 'mew-w3m-cid-retrieve' for old Mew.
	
2002-09-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-arrived-setup): Use 0 instead of nil as the initial
	value for the new obarray.

	* w3m-filter.el (w3m-filter-setup): Use 0 instead of nil as the
	initial value for the new obarray.

2002-09-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-mode): Fix typo in its docstring.

2002-09-20  Kahlil HODGSON  <dorge@tpg.com.au>

	* w3m.el (w3m-fontify-bold): Permit class attributes, newlines or
	whitespaces in the tag.
	(w3m-fontify-underline): Ditto.

2002-09-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-treat-drive-letter): New constant.
	(w3m-url-to-file-name): Check `w3m-treat-drive-letter'.

	* w3m-dtree.el (w3m-dtree-directory-name): Check
	`w3m-treat-drive-letter'.

2002-09-10  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-unseen-remove-one): Use
	`mew-cinfo-set-fld|msg|time|size' instead of `mew-cinfo-set'.

2002-09-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.3.2.
	(w3m-init-file): Changed its default value.

	* Makefile.in (PACKAGE): Use `emacs-w3m' instead of `w3m_el'.

2002-09-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-init-file): Changed its default value.
	(toplevel): When Emacs is running without interactive terminal, do
	not load the startup file and do not evaluate `w3m-load-hook'.
	Load a byte compiled startup file safely.

2002-09-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-mailto-url-popup-function-alist): New user option.
	(w3m-view-this-url-1): Don't save a window configuration for
	mailto urls here.
	(w3m-goto-mailto-url): Save a window configuration while composing